--- a/index.html
+++ b/index.html
@@ -476,13 +476,13 @@
         </div>
         
         <div class="pfp">
-          <img src="pfp.jpeg" alt="Profile Pic">
+          <img src="alexis.jpeg" alt="Profile Pic">
           <h3>ALEXIS CALIMBAS VERSOZA</h3>
           <p>Research Member</p>
         </div>
         
         <div class="pfp">
-          <img src="pfp.jpeg" alt="Profile Pic">
+          <img src="maryen.jpeg" alt="Profile Pic">
           <h3>MARYEN GANAGANAG</h3>
           <p>Research Member</p>
         </div>
