--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+0<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -455,6 +455,12 @@
           <img src="leo.jpeg" alt="Profile Pic">
           <h3>LEO JOHN ADUCAL</h3>
           <p>Secretary</p>
+        </div>
+
+        <div class="pfp">
+          <img src="adrian.jpeg" alt="Profile Pic">
+          <h3>JOHN ADRIAN CHYA</h3>
+          <p>Research Member</p>
         </div>
         
         <div class="pfp">
